--- a/package.json
+++ b/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.69.5",
+    "swal": "^0.1.0",
+    "sweetalert2": "^11.10.1"
   },
   "devDependencies": {
+    "@types/react": "18.2.41",
     "autoprefixer": "^10.0.1",
     "eslint": "^8",
     "eslint-config-next": "14.0.3",
