--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/pagination": "^2.0.26",
     "axios": "^1.6.2",
     "mongoose": "^8.0.2",
     "next": "14.0.3",
+    "pagination": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.69.5",
